# WonderGUI

./: .gitattributes  .gitignore  CMakeLists.txt  Doxyfile  README  README.md  TODO.txt  WgLegacy.project  WonderGUI.cbp  WonderGUI.workspace  build-package.sh  enums.recipe  fixgeo.rb  output_gen1.wax  output_gen2.wax  replace_all.sh  spx_transition_notes.txt  statements  toolchain-m68k-atari-mint.cmake  wondergui.cbp  wondergui.depend  wondergui.project  wondergui.sln  wondergui.vcproj  wondergui.vcxproj  wondergui.vcxproj.filters  wonderui_legacy.cbp
bench/: CMakeLists.txt  anuvverbubbla_8x8.fnt  bench.cbp  bench.depend  bench.project  bench.vcproj  bench.vcxproj  main.cpp  main2.cpp
bench/bench/: Info.plist
bench/bench-mac.xcodeproj/: project.pbxproj
bench/bench.xcodeproj/: project.pbxproj
framework/: CMakeLists.txt  wg_anim.cpp  wg_anim.h  wg_animplayer.cpp  wg_animplayer.h  wg_base.cpp  wg_base.h  wg_bitmapglyphs.cpp  wg_bitmapglyphs.h  wg_blockset.cpp  wg_blockset.h  wg_blockskin.cpp  wg_blockskin.h  wg_boxskin.cpp  wg_boxskin.h  wg_button.cpp  wg_button.h  wg_canvascapsule.cpp  wg_canvascapsule.h  wg_canvasstack.cpp  wg_canvasstack.h  wg_capsule.cpp  wg_capsule.h  wg_charseq_dummy.cpp  wg_chart.cpp  wg_chart.h  wg_checkbox.cpp  wg_checkbox.h  wg_color.h  wg_colorset.cpp  wg_colorset.h  wg_colorskin.cpp  wg_colorskin.h  wg_container.cpp  wg_container.h  wg_context.h  wg_cursor.cpp  wg_cursor.h  wg_cursorinstance.cpp  wg_cursorinstance.h  (+150 more)
framework/base/: wg3_base.cpp  wg3_base.h  wg3_bitmapfont.cpp  wg3_bitmapfont.h  wg3_blob.cpp  wg3_blob.h  wg3_canvaslayers.cpp  wg3_canvaslayers.h  wg3_chain.h  wg3_char.h  wg3_charbuffer.cpp  wg3_charbuffer.h  wg3_charseq.cpp  wg3_charseq.h  wg3_color.cpp  wg3_color.h  wg3_context.cpp  wg3_context.h  wg3_dataset.h  wg3_dummyfont.cpp  wg3_dummyfont.h  wg3_enumextras.cpp  wg3_enumextras.h  wg3_font.cpp  wg3_font.h  wg3_geo.cpp  wg3_geo.h  wg3_gfxdevice.cpp  wg3_gfxdevice.h  wg3_gradient.cpp  wg3_gradient.h  wg3_hostbridge.h  wg3_mempool.cpp  wg3_mempool.h  wg3_memstack.cpp  wg3_memstack.h  wg3_mu.cpp  wg3_mu.h  wg3_nullgfxdevice.cpp  wg3_nullgfxdevice.h  (+34 more)
framework/c-abi-wrapper/: CMakeLists.txt  wg3_cabi.cpp  wg3_cabi.h  wg3_cabi_bitmapcache.cpp  wg3_cabi_bitmapcache.h  wg3_cabi_bitmapfont.cpp  wg3_cabi_bitmapfont.h  wg3_cabi_canvaslayers.cpp  wg3_cabi_canvaslayers.h  wg3_cabi_font.cpp  wg3_cabi_font.h  wg3_cabi_freetypefont.cpp  wg3_cabi_freetypefont.h  wg3_cabi_gfxdevice.cpp  wg3_cabi_gfxdevice.h  wg3_cabi_surface.cpp  wg3_cabi_surface.h  wg3_cabi_surfacefactory.cpp  wg3_cabi_surfacefactory.h
framework/components/: wg3_canimframes.cpp  wg3_canimframes.h  wg3_cdynamicvector.h  wg3_cdynamicvector.impl.h  wg3_component.cpp  wg3_component.h  wg3_cstaticvector.h  wg3_cstaticvector.impl.h
framework/fontengines/: CMakeLists.txt
framework/interfaces/: wg3_interface.cpp  wg3_interface.h
framework/opengl/: wg_glsurface.cpp  wg_glsurface.h  wg_glsurfacefactory.cpp  wg_glsurfacefactory.h
framework/skins/: wg3_animskin.cpp  wg3_animskin.h  wg3_blockskin.cpp  wg3_blockskin.h  wg3_boxskin.cpp  wg3_boxskin.h  wg3_colorskin.cpp  wg3_colorskin.h  wg3_extendedskin.cpp  wg3_extendedskin.h  wg3_fillbarskin.cpp  wg3_fillbarskin.h  wg3_lambdaskin.cpp  wg3_lambdaskin.h  wg3_multiblockskin.cpp  wg3_multiblockskin.h  wg3_skin.cpp  wg3_skin.h  wg3_skin.impl.h  wg3_stateskin.cpp  wg3_stateskin.h  wg3_staticcolorskin.cpp  wg3_staticcolorskin.h
framework/wg_soft/: wg_surface_soft.cpp  wg_surface_soft.h  wg_surfacefactory_soft.cpp  wg_surfacefactory_soft.h
src/: CMakeLists.txt  wg_userdefines.h  wondergui.h
src/base/: wg_anim.cpp  wg_anim.h  wg_base.cpp  wg_base.h  wg_bitmapfont.cpp  wg_bitmapfont.h  wg_bitmapglyphs.cpp  wg_bitmapglyphs.h  wg_blob.cpp  wg_blob.h  wg_canvaslayers.cpp  wg_canvaslayers.h  wg_caret.cpp  wg_caret.h  wg_caret2.cpp  wg_caret2.h  wg_caretinstance.cpp  wg_caretinstance.h  wg_chain.cpp  wg_chain.h  wg_char.cpp  wg_char.h  wg_charbuffer.cpp  wg_charbuffer.h  wg_charseq.cpp  wg_charseq.h  wg_childiterator.h  wg_codepages.cpp  wg_codepages.h  wg_color.cpp  wg_color.h  wg_componentholder.h  wg_context.cpp  wg_context.h  wg_dataset.h  wg_dummyfont.cpp  wg_dummyfont.h  wg_enumextras.cpp  wg_enumextras.h  wg_event.cpp  (+147 more)
src/baselibrary/: CMakeLists.txt  wondergui.h
src/c-abi-wrapper/: CMakeLists.txt  wg_cabi.cpp  wg_cabi.h  wg_cabi_base.cpp  wg_cabi_base.h  wg_cabi_bitmapcache.cpp  wg_cabi_bitmapcache.h  wg_cabi_bitmapfont.cpp  wg_cabi_canvaslayers.cpp  wg_cabi_canvaslayers.h  wg_cabi_capsule.cpp  wg_cabi_capsule.h  wg_cabi_font.cpp  wg_cabi_font.h  wg_cabi_freetypefont.cpp  wg_cabi_gfxdevice.cpp  wg_cabi_gfxdevice.h  wg_cabi_root.cpp  wg_cabi_root.h  wg_cabi_root_incalls.cpp  wg_cabi_root_incalls.h  wg_cabi_root_interface.cpp  wg_cabi_root_interface.h  wg_cabi_root_outcalls.cpp  wg_cabi_surface.cpp  wg_cabi_surface.h  wg_cabi_surfacefactory.cpp  wg_cabi_surfacefactory.h
src/cabi/: CMakeLists.txt  wg_cabi_base.cpp  wg_cabi_bitmapcache.cpp  wg_cabi_bitmapcache.h  wg_cabi_bitmapfont.cpp  wg_cabi_bitmapfont.h  wg_cabi_canvaslayers.cpp  wg_cabi_canvaslayers.h  wg_cabi_font.h  wg_cabi_freetypefont.cpp  wg_cabi_freetypefont.h  wg_cabi_gfxdevice.cpp  wg_cabi_hostbridge.cpp  wg_cabi_hostbridge.h  wg_cabi_root.h  wg_cabi_root_incalls.cpp  wg_cabi_root_interface.h  wg_cabi_root_outcalls.h  wg_cabi_surface.h  wg_cabi_surfacefactory.cpp
src/components/: wg_canimframes.cpp  wg_canimframes.h  wg_cbasicslot.h  wg_ccanvas.cpp  wg_ccanvas.h  wg_ccolumnheader.cpp  wg_ccolumnheader.h  wg_cdynamicslotarray.h  wg_cdynamicslotarray.impl.h  wg_cdynamicslotcollection.h  wg_cdynamicslotvector.h  wg_cdynamicslotvector.impl.h  wg_cdynamicvector.h  wg_cdynamicvector.impl.h  wg_cgfxinstream.cpp  wg_cgfxinstream.h  wg_cgfxoutstream.cpp  wg_cgfxoutstream.h  wg_cicon.h  wg_cicondisplay.cpp  wg_cicondisplay.h  wg_component.cpp  wg_component.h  wg_cpaddedslotarray.h  wg_cpaddedslotarray.impl.h  wg_cpaddedslotvector.h  wg_cpaddedslotvector.impl.h  wg_cselectableslotarray.h  wg_cselectableslotarray.impl.h  wg_cselectableslotvector.h  wg_cshadows.cpp  wg_cslot.h  (+39 more)
(+3889 files in other folders)
