

add_library( wondergui STATIC
			

	baselibrary/base/wg3_base.cpp
	baselibrary/base/wg3_base.h
	baselibrary/base/wg3_bitmapfont.cpp
	baselibrary/base/wg3_bitmapfont.h
	baselibrary/base/wg3_blob.cpp
	baselibrary/base/wg3_blob.h
	baselibrary/base/wg3_canvaslayers.cpp
	baselibrary/base/wg3_canvaslayers.h
	baselibrary/base/wg3_chain.cpp
	baselibrary/base/wg3_chain.h
	baselibrary/base/wg3_char.h
	baselibrary/base/wg3_charbuffer.cpp
	baselibrary/base/wg3_charbuffer.h
	baselibrary/base/wg3_charseq.cpp
	baselibrary/base/wg3_charseq.h
	baselibrary/base/wg3_codepages.cpp
	baselibrary/base/wg3_codepages.h
	baselibrary/base/wg3_color.cpp
	baselibrary/base/wg3_color.h
	baselibrary/base/wg3_context.cpp
	baselibrary/base/wg3_context.h
	baselibrary/base/wg3_dataset.cpp
	baselibrary/base/wg3_dataset.h
	baselibrary/base/wg3_dummyfont.cpp
	baselibrary/base/wg3_dummyfont.h
	baselibrary/base/wg3_enumextras.cpp
	baselibrary/base/wg3_enumextras.h
	baselibrary/base/wg3_font.cpp
	baselibrary/base/wg3_font.h
	baselibrary/base/wg3_geo.cpp
	baselibrary/base/wg3_geo.h
	baselibrary/base/wg3_gfxdevice.cpp
	baselibrary/base/wg3_gfxdevice.h
	baselibrary/base/wg3_gradient.cpp
	baselibrary/base/wg3_gradient.h
	baselibrary/base/wg3_hostbridge.h
	baselibrary/base/wg3_internal.h
	baselibrary/base/wg3_mempool.cpp
	baselibrary/base/wg3_mempool.h
	baselibrary/base/wg3_memstack.cpp
	baselibrary/base/wg3_memstack.h
	baselibrary/base/wg3_mu.cpp
	baselibrary/base/wg3_mu.h
	baselibrary/base/wg3_nullgfxdevice.cpp
	baselibrary/base/wg3_nullgfxdevice.h
	baselibrary/base/wg3_object.cpp
	baselibrary/base/wg3_object.h
	baselibrary/base/wg3_patches_t.cpp
	baselibrary/base/wg3_patches_t.impl.h
	baselibrary/base/wg3_patches_t.h
	baselibrary/base/wg3_patches.cpp
	baselibrary/base/wg3_patches.h
	baselibrary/base/wg3_pointers.h
	baselibrary/base/wg3_skinslotmanager.cpp
	baselibrary/base/wg3_skinslotmanager.h
	baselibrary/base/wg3_string.cpp
	baselibrary/base/wg3_string.h
	baselibrary/base/wg3_strongcomponentptr.h
	baselibrary/base/wg3_strongptr.h
	baselibrary/base/wg3_surface.cpp
	baselibrary/base/wg3_surface.h
	baselibrary/base/wg3_surfacefactory.cpp
	baselibrary/base/wg3_surfacefactory.h
	baselibrary/base/wg3_textlink.cpp
	baselibrary/base/wg3_textlink.h
	baselibrary/base/wg3_textstyle.cpp
	baselibrary/base/wg3_textstyle.h
	baselibrary/base/wg3_textstylemanager.cpp
	baselibrary/base/wg3_textstylemanager.h
	baselibrary/base/wg3_texttool.cpp
	baselibrary/base/wg3_texttool.h
	baselibrary/base/wg3_types.h
	baselibrary/base/wg3_util.cpp
	baselibrary/base/wg3_util.h
	baselibrary/base/wg3_weakcomponentptr.h
	baselibrary/base/wg3_weakptr.h


	baselibrary/components/wg3_canimframes.cpp
	baselibrary/components/wg3_canimframes.h
	baselibrary/components/wg3_cdynamicvector.h
	baselibrary/components/wg3_cdynamicvector.impl.h
	baselibrary/components/wg3_component.cpp
	baselibrary/components/wg3_component.h
	baselibrary/components/wg3_cstaticvector.h
	baselibrary/components/wg3_cstaticvector.impl.h


	baselibrary/skins/wg3_animskin.cpp
	baselibrary/skins/wg3_animskin.h
	baselibrary/skins/wg3_skin.cpp
	baselibrary/skins/wg3_skin.h
	baselibrary/skins/wg3_skin.impl.h
	baselibrary/skins/wg3_stateskin.cpp
	baselibrary/skins/wg3_stateskin.h	
	baselibrary/skins/anim/wg3_spinanimskin.cpp
	baselibrary/skins/anim/wg3_spinanimskin.h
	baselibrary/skins/meter/wg3_fillmeterskin.cpp
	baselibrary/skins/meter/wg3_fillmeterskin.h
	baselibrary/skins/meter/wg3_framemeterskin.cpp
	baselibrary/skins/meter/wg3_framemeterskin.h
	baselibrary/skins/meter/wg3_piemeterskin.cpp
	baselibrary/skins/meter/wg3_piemeterskin.h
	baselibrary/skins/meter/wg3_spinmeterskin.cpp
	baselibrary/skins/meter/wg3_spinmeterskin.h
	baselibrary/skins/misc/wg3_bakeskin.cpp
	baselibrary/skins/misc/wg3_bakeskin.h
	baselibrary/skins/misc/wg3_doubleskin.cpp
	baselibrary/skins/misc/wg3_doubleskin.h
	baselibrary/skins/state/wg3_blockskin.cpp
	baselibrary/skins/state/wg3_blockskin.h
	baselibrary/skins/state/wg3_boxskin.cpp
	baselibrary/skins/state/wg3_boxskin.h
	baselibrary/skins/state/wg3_circleskin.cpp
	baselibrary/skins/state/wg3_circleskin.h
	baselibrary/skins/state/wg3_colorskin.cpp
	baselibrary/skins/state/wg3_colorskin.h
	baselibrary/skins/state/wg3_lambdaskin.cpp
	baselibrary/skins/state/wg3_lambdaskin.h
	baselibrary/skins/state/wg3_multiblockskin.cpp
	baselibrary/skins/state/wg3_multiblockskin.h
	baselibrary/skins/state/wg3_scrollskin.cpp
	baselibrary/skins/state/wg3_scrollskin.h
	baselibrary/skins/state/wg3_tileskin.cpp
	baselibrary/skins/state/wg3_tileskin.h
	baselibrary/skins/static/wg3_staticblockskin.cpp
	baselibrary/skins/static/wg3_staticblockskin.h
	baselibrary/skins/static/wg3_staticboxskin.cpp
	baselibrary/skins/static/wg3_staticboxskin.h
	baselibrary/skins/static/wg3_staticcolorskin.cpp
	baselibrary/skins/static/wg3_staticcolorskin.h
	baselibrary/skins/static/wg3_staticgradientskin.cpp
	baselibrary/skins/static/wg3_staticgradientskin.h
	baselibrary/skins/static/wg3_statictileskin.cpp
	baselibrary/skins/static/wg3_statictileskin.h



	wg_anim.cpp
	wg_anim.h
	wg_animplayer.cpp
	wg_animplayer.h
	wg_base.cpp
	wg_base.h
	wg_blockset.cpp
	wg_blockset.h
	wg_button.cpp
	wg_button.h
	wg_canvascapsule.cpp
	wg_canvascapsule.h
	wg_capsule.cpp
	wg_capsule.h
	wg_chart.cpp
	wg_chart.h
	wg_checkbox.cpp
	wg_checkbox.h
	wg_color.h
	wg_colorset.cpp
	wg_colorset.h
	wg_container.cpp
	wg_container.h
	wg_cursor.cpp
	wg_cursor.h
	wg_cursorinstance.cpp
	wg_cursorinstance.h
	wg_dragndroplayer.cpp
	wg_dragndroplayer.h
	wg_event.cpp
	wg_event.h
	wg_eventfilter.cpp
	wg_eventfilter.h
	wg_eventhandler.cpp
	wg_eventhandler.h
	wg_eventlogger.cpp
	wg_eventlogger.h
	wg_filler.cpp
	wg_filler.h
	wg_flexpanel.cpp
	wg_flexpanel.h
	wg_flowpanel.cpp
	wg_flowpanel.h
	wg_fpsdisplay.cpp
	wg_fpsdisplay.h
	wg_geo.h
	wg_gfxanim.cpp
	wg_gfxanim.h
	wg_gfxdevice.cpp
	wg_gfxdevice.h
	wg_hook.cpp
	wg_hook.h
	wg_iconholder.cpp
	wg_iconholder.h
	wg_image.cpp
	wg_image.h
	wg_interface_edittext.h
	wg_interface_textholder.cpp
	wg_interface_textholder.h
	wg_key.h
	wg_knob.cpp
	wg_knob.h
	wg_layer.cpp
	wg_layer.h
	wg_lineeditor.cpp
	wg_lineeditor.h
	wg_modallayer.cpp
	wg_modallayer.h
	wg_mouseblocker.cpp
	wg_mouseblocker.h
	wg_multislider.cpp
	wg_multislider.h
	wg_oscilloscope.cpp
	wg_oscilloscope.h
	wg_packpanel.cpp
	wg_packpanel.h
	wg_panel.cpp
	wg_panel.h
	wg_patches.cpp
	wg_patches.h
	wg_pen.cpp
	wg_pen.h
	wg_pianokeyboard.cpp
	wg_pianokeyboard.h
	wg_popuplayer.cpp
	wg_popuplayer.h
	wg_popupopener.cpp
	wg_popupopener.h
	wg_radiobutton.cpp
	wg_radiobutton.h
	wg_rangeslider.cpp
	wg_rangeslider.h
	wg_renderlayercapsule.cpp
	wg_renderlayercapsule.h
	wg_rootpanel.cpp
	wg_rootpanel.h
	wg_rulerlabels.cpp
	wg_rulerlabels.h
	wg_scaleimage.cpp
	wg_scaleimage.h
	wg_scrollchart.cpp
	wg_scrollchart.h
	wg_scrollpanel.cpp
	wg_scrollpanel.h
	wg_shadercapsule.cpp
	wg_shadercapsule.h
	wg_shadowlayer.cpp
	wg_shadowlayer.h
	wg_simpleknob.cpp
	wg_simpleknob.h
	wg_simplevolumemeter.cpp
	wg_simplevolumemeter.h
	wg_sizebroker.cpp
	wg_sizebroker.h
	wg_sizecapsule.cpp
	wg_sizecapsule.h
	wg_slider.cpp
	wg_slider.h
	wg_slidertarget.cpp
	wg_slidertarget.h
	wg_smartptr.cpp
	wg_smartptr.h
	wg_stackpanel.cpp
	wg_stackpanel.h
	wg_switch.cpp
	wg_switch.h
	wg_text.cpp
	wg_text.h
	wg_textdisplay.cpp
	wg_textdisplay.h
	wg_tooltiplayer.cpp
	wg_tooltiplayer.h
	wg_types.h
	wg_userdefines.h
	wg_util.cpp
	wg_util.h
	wg_valueformat.cpp
	wg_valueformat.h
	wg_vectorpanel.cpp
	wg_vectorpanel.h
	wg_volumemeter.cpp
	wg_volumemeter.h
	wg_widget.cpp
	wg_widget.h
	wg_widgetholder.cpp
	wg_widgetholder.h
	wg_zoomoutcapsule.cpp
	wg_zoomoutcapsule.h

)
